--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content-box">
         <div>
             <div class="images">
-                <img src="/assets/bg.jpeg" alt="logo">
+                <img src="../assets/bg.jpeg" alt="logo">
             </div>
         </div>
         <div>
